# AstraNotes

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
demo/: capture_screenshots.py  demo-script.md  recording-guide.md  seed_data.py
docs/ai-usage/: ai-usage-log.md
docs/architecture/: overview.md  uml.md
docs/architecture/diagrams/: README.md
docs/decisions/: ADR-0001-supabase-cloud-vision.md  ADR-0002-pivot-to-local-first.md  ADR-0003-isolate-sqlite-in-localstorage.md  ADR-0004-domain-owned-invariants.md  ADR-0005-fts5-search.md  ADR-0006-secondary-write-isolation.md  ADR-0007-append-only-audit-log.md
docs/deployment/: deployment.md
docs/maintenance/: CHANGELOG.md  maintenance.md
docs/planning/: backlog.md  definition-of-done.md  sprint-zero.md  waterfall-gantt.md  working-agreement.md
docs/requirements/: final-requirements.md  initial-vision-supabase.md
docs/security/: security-notes.md  threat-model.md
docs/testing/: test-plan.md  test-report.md
docs/traceability/: traceability-matrix.md
src/astranotes/: __init__.py  config.py  errors.py  timeutil.py  wsgi.py
src/astranotes/domain/: __init__.py  note.py
src/astranotes/services/: __init__.py  encryption_service.py  note_service.py  session.py
src/astranotes/storage/: __init__.py  audit_log.py  local_storage.py  note_repository.py  schema.sql  search_index.py  version_history.py
src/astranotes/web/: __init__.py  app.py  deps.py  markdown_render.py
src/astranotes/web/routes/: __init__.py  export.py  notes.py  organize.py  pages.py  secure.py
src/astranotes/web/static/: preview.js  style.css
src/astranotes/web/templates/: base.html  editor.html  error.html  history.html  index.html  profile.html  search.html  settings.html  unlock.html  view.html
tests/: conftest.py  test_architecture.py  test_audit.py  test_config.py  test_domain.py  test_encryption.py  test_note_service.py  test_repository.py  test_search.py  test_storage.py  test_versions.py  test_web.py
tools/: render_diagrams.py
